--- a/wz-api/pom.xml
+++ b/wz-api/pom.xml
@@ -20,5 +20,11 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.github.sgroschupf</groupId>
+      <artifactId>zkclient</artifactId>
+      <version>0.1</version>
+    </dependency>
+
   </dependencies>
 </project>
