--- a/wz-consumer/pom.xml
+++ b/wz-consumer/pom.xml
@@ -208,5 +208,10 @@
           <version>2.0</version>
           <scope>provided</scope>
       </dependency>
+      <dependency>
+          <groupId>net.jcip</groupId>
+          <artifactId>jcip-annotations</artifactId>
+          <version>1.0</version>
+      </dependency>
   </dependencies>
 </project>
