研究netty的http协议

--- a/wz-java-test/pom.xml
+++ b/wz-java-test/pom.xml
@@ -133,5 +133,12 @@
     </dependencies>
     <build>
         <finalName>wz-test</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
+
 </project>
