--- a/wz-provider/pom.xml
+++ b/wz-provider/pom.xml
@@ -125,4 +125,13 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+  <build>
+    <finalName>wz-provider</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
