--- a/wz-consumer/pom.xml
+++ b/wz-consumer/pom.xml
@@ -40,11 +40,64 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <!-- netty start -->
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
             <version>5.0.0.Alpha2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jibx</groupId>
+            <artifactId>jibx-bind</artifactId>
+            <version>1.2.6</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>bcel</groupId>
+                    <artifactId>bcel</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.jibx</groupId>
+            <artifactId>jibx-run</artifactId>
+            <version>1.2.6</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>bcel</groupId>
+                    <artifactId>bcel</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.jibx</groupId>
+            <artifactId>jibx-extras</artifactId>
+            <version>1.2.6</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>bcel</groupId>
+                    <artifactId>bcel</artifactId>
+                </exclusion>
+            </exclusions>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jibx</groupId>
+            <artifactId>jibx-schema</artifactId>
+            <version>1.2.6</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jibx</groupId>
+            <artifactId>jibx-tools</artifactId>
+            <version>1.2.6</version>
+            <scope>compile</scope>
+        </dependency>
+        <!-- netty end -->
         <!-- commons start -->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -219,4 +272,66 @@
             <version>1.0</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <!-- http://jibx.sourceforge.net/jibx-maven-plugin/ -->
+                <groupId>org.jibx</groupId>
+                <artifactId>jibx-maven-plugin</artifactId>
+                <version>1.2.5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>bind</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>generate-java-code-from-schema</id>
+                        <goals>
+                            <goal>schema-codegen</goal>
+                        </goals>
+                        <configuration>
+                            <schemaLocation>src/main/resources</schemaLocation>
+                            <options>
+                                <package>com.poc.jibx</package>
+                            </options>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>jibx-2-wsdl</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>jibx2wsdl</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <interfaceClassNames>
+                        <interfaceClassName>com.wz.netty.protocol.http.xml.pojo.Order</interfaceClassName>
+                    </interfaceClassNames>
+                    <outputDirectory>${project.build.outputDirectory}/META-INF/schema</outputDirectory>
+
+                    <schemaBindingDirectory>${project.build.outputDirectory}/META-INF/schema</schemaBindingDirectory>
+                    <includeSchemaBindings>
+                        <includeSchemaBindings>*binding.xml</includeSchemaBindings>
+                    </includeSchemaBindings>
+                    <excludeSchemaBindings>
+                        <excludeSchemaBinding>template-binding.xml</excludeSchemaBinding>
+                    </excludeSchemaBindings>
+                    <verbose>true</verbose>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.bcel</groupId>
+                        <artifactId>bcel</artifactId>
+                        <version>6.0</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
 </project>
