增加ant运行JiBx的配置

--- a/wz-consumer/pom.xml
+++ b/wz-consumer/pom.xml
@@ -97,6 +97,11 @@
             <version>1.2.6</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.bcel</groupId>
+            <artifactId>bcel</artifactId>
+            <version>6.0</version>
+        </dependency>
         <!-- netty end -->
         <!-- commons start -->
         <dependency>
