--- a/wz-consumer/build.xml
+++ b/wz-consumer/build.xml
@@ -2,7 +2,7 @@
 <project default="main" basedir=".">
     <path id="classpath">
         <dirset dir="${basedir}/target/classes" />
-        <dirset dir="${basedir}/target/test-classes" />
+        <!--<dirset dir="${basedir}/target/test-classes" />-->
         <fileset dir="D:/repository/com/thoughtworks/qdox/qdox/1.12.1" includes="*.jar" />
         <fileset dir="D:/repository/xpp3/xpp3/1.1.3.4.O" includes="*.jar" />
         <fileset dir="D:/repository/org/jibx/jibx-bind/1.2.6/" includes="*.jar" />
