--- a/wz-consumer/pom.xml
+++ b/wz-consumer/pom.xml
@@ -102,6 +102,20 @@
             <artifactId>bcel</artifactId>
             <version>6.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.jboss.marshalling/jboss-marshalling -->
+        <dependency>
+            <groupId>org.jboss.marshalling</groupId>
+            <artifactId>jboss-marshalling</artifactId>
+            <version>1.4.11.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.marshalling</groupId>
+            <artifactId>jboss-marshalling-serial</artifactId>
+            <version>1.4.11.Final</version>
+        </dependency>
+
+
         <!-- netty end -->
         <!-- commons start -->
         <dependency>
