--- a/wz-java-test/pom.xml
+++ b/wz-java-test/pom.xml
@@ -24,6 +24,10 @@
             <artifactId>jedis</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
