--- a/wz-parent/pom.xml
+++ b/wz-parent/pom.xml
@@ -15,12 +15,16 @@
         <module>../wz-consumer</module>
         <module>../wz-provider</module>
         <module>../wz-java-test</module>
+        <module>../wz-spark</module>
     </modules>
 
     <properties>
         <spring.version>4.3.0.RELEASE</spring.version>
         <default.encoding>UTF-8</default.encoding>
         <default.jdk.version>1.8</default.jdk.version>
+
+        <spark.version>1.3.0</spark.version>
+        <hadoop.version>2.4.1</hadoop.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
