--- a/wz-spark/pom.xml
+++ b/wz-spark/pom.xml
@@ -44,7 +44,7 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming-kafka_2.10</artifactId>
-      <version>${spark.version}</version>
+      <version>1.6.2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
