添加对wz-api的依赖

--- a/wz-java-test/pom.xml
+++ b/wz-java-test/pom.xml
@@ -15,6 +15,11 @@
     <name>wz-java-test</name>
     <url>http://maven.apache.org</url>
     <dependencies>
+        <dependency>
+            <groupId>com.wz.dubbo</groupId>
+            <artifactId>wz-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
         <dependency>
             <groupId>org.javassist</groupId>
