--- a/wz-java-test/pom.xml
+++ b/wz-java-test/pom.xml
@@ -165,6 +165,13 @@
             <artifactId>kafka-streams</artifactId>
             <version>0.10.0.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.lmax/disruptor -->
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.3.5</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>wz-test</finalName>
