--- a/wz-jd/pom.xml
+++ b/wz-jd/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>rxjava</artifactId>
             <version>1.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.3.5</version>
+        </dependency>
 
     </dependencies>
 </project>
