--- a/wz-jmeter/pom.xml
+++ b/wz-jmeter/pom.xml
@@ -33,6 +33,23 @@
             <artifactId>wz-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- dubbo -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.5.4-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.3.6</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.jmeter/ApacheJMeter_core -->
         <dependency>
             <groupId>org.apache.jmeter</groupId>
