--- a/wz-jd/pom.xml
+++ b/wz-jd/pom.xml
@@ -36,6 +36,17 @@
             <version>1.2.2</version>
         </dependency>
         <dependency>
+            <groupId>io.reactivex</groupId>
+            <artifactId>rxjava-joins</artifactId>
+            <version>0.22.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.reactivex</groupId>
+                    <artifactId>rxjava</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
             <version>3.3.5</version>
