--- a/wz-parent/pom.xml
+++ b/wz-parent/pom.xml
@@ -41,25 +41,31 @@
         <aopalliance.version>1.0</aopalliance.version>
         <joda.time.version>2.9.4</joda.time.version>
         <guava.version>19.0</guava.version>
-        <commons.logging.version>1.2</commons.logging.version>
-        <commons.lang.version>2.6</commons.lang.version>
-        <commons.collections.version>3.2.1</commons.collections.version>
-        <commons.codec.version>1.9</commons.codec.version>
-        <commons.io.version>2.4</commons.io.version>
-        <commons.pool.version>1.6</commons.pool.version>
+        <commons-pool.version>1.6</commons-pool.version>
+        <commons-logging.version>1.2</commons-logging.version>
+        <commons-lang3.version>3.1</commons-lang3.version>
+        <commons-lang.version>2.5</commons-lang.version>
+        <commons-collections.version>3.2.1</commons-collections.version>
+        <commons-beanutils.version>1.8.0</commons-beanutils.version>
+        <commons-httpclient.version>3.1</commons-httpclient.version>
+        <commons-codec.version>1.9</commons-codec.version>
+        <commons-cli>1.2</commons-cli>
+        <commons-fileupload.version>1.3.1</commons-fileupload.version>
+        <commons-io.version>2.4</commons-io.version>
+        <logback.version>1.1.2</logback.version>
         <http.client.version>4.4.1</http.client.version>
         <druid.version>1.0.20</druid.version>
         <mysql.version>5.1.36</mysql.version>
         <slf4j.api.version>1.7.21</slf4j.api.version>
         <logback.version>1.1.7</logback.version>
-        <fastjson.version>1.2.6</fastjson.version>
+        <fastjson.version>1.2.28</fastjson.version>
         <jackson.version>2.7.4</jackson.version>
         <javassist.version>3.18.2-GA</javassist.version>
         <freemarker.version>2.3.23</freemarker.version>
         <velocity.version>1.7</velocity.version>
         <velocity.tools.version>2.0</velocity.tools.version>
         <!-- validator -->
-        <hibernate.validator.version>5.1.3.Final</hibernate.validator.version>
+        <hibernate.validator.version>5.4.1.Final</hibernate.validator.version>
         <validation.api.version>1.1.0.Final</validation.api.version>
         <jboss.logging.version>3.1.4.GA</jboss.logging.version>
         <classmate.version>1.0.0</classmate.version>
@@ -247,32 +253,32 @@
             <dependency>
                 <groupId>commons-logging</groupId>
                 <artifactId>commons-logging</artifactId>
-                <version>${commons.logging.version}</version>
+                <version>${commons-logging.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-lang</groupId>
                 <artifactId>commons-lang</artifactId>
-                <version>${commons.lang.version}</version>
+                <version>${commons-lang.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-collections</groupId>
                 <artifactId>commons-collections</artifactId>
-                <version>${commons.collections.version}</version>
+                <version>${commons-collections.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
-                <version>${commons.codec.version}</version>
+                <version>${commons-codec.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>${commons.io.version}</version>
+                <version>${commons-io.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-pool</groupId>
                 <artifactId>commons-pool</artifactId>
-                <version>${commons.pool.version}</version>
+                <version>${commons-pool.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
