--- a/wz-java-test/pom.xml
+++ b/wz-java-test/pom.xml
@@ -213,6 +213,10 @@
             <artifactId>commons-httpclient</artifactId>
             <version>3.1</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
         <!--<dependency>
             <groupId>org.apache.commons</groupId>
