--- a/wz-consumer/pom.xml
+++ b/wz-consumer/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.wz.dubbo</groupId>
+        <groupId>com.wz.prodect</groupId>
         <artifactId>wz-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../wz-parent/pom.xml</relativePath>
