--- a/wz-parent/pom.xml
+++ b/wz-parent/pom.xml
@@ -20,6 +20,8 @@
         <module>../wz-jmeter</module>
         <module>../wz-jd-tbschedule</module>
         <module>../wz-java</module>
+        <module>../dubbo-provider</module>
+        <module>../dubbo-consumer</module>
     </modules>
 
     <properties>
