--- a/rpc-smile/pom.xml
+++ b/rpc-smile/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
-            <version>2.5.4-SNAPSHOT</version>
+            <version>2.6.1</version>
         </dependency>
 
         <!-- logback -->
@@ -47,6 +47,7 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.7</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
