--- a/wz-java-test/pom.xml
+++ b/wz-java-test/pom.xml
@@ -16,9 +16,8 @@
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
-            <groupId>com.wz.dubbo</groupId>
-            <artifactId>wz-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
         <dependency>
