--- a/wz-jmeter/pom.xml
+++ b/wz-jmeter/pom.xml
@@ -28,7 +28,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.wz.dubbo</groupId>
+            <groupId>com.wz.prodect</groupId>
             <artifactId>wz-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
