--- a/wz-api/pom.xml
+++ b/wz-api/pom.xml
@@ -36,6 +36,11 @@
       <artifactId>curator-framework</artifactId>
       <version>2.12.0</version>
     </dependency>
+      <dependency>
+          <groupId>wz.rpc.smile</groupId>
+          <artifactId>rpc-smile</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
 
   </dependencies>
   <build>
