--- a/wz-java/pom.xml
+++ b/wz-java/pom.xml
@@ -35,26 +35,24 @@
       <artifactId>jd-mcc-api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.squareup</groupId>
+      <artifactId>javapoet</artifactId>
+      <version>1.10.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>${plugin.compiler.version}</version>
+        <version>3.7.0</version>
         <configuration>
-          <encoding>${default.encoding}</encoding>
           <source>1.8</source>
           <target>1.8</target>
-          <compilerArgument>-Xlint:unchecked</compilerArgument>
+          <compilerArgument>-proc:none</compilerArgument>
         </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>org.codehaus.plexus</groupId>
-            <artifactId>plexus-compiler-javac</artifactId>
-            <version>${plugin.plexus.compiler.version}</version>
-          </dependency>
-        </dependencies>
       </plugin>
     </plugins>
   </build>
