--- a/wz-jd/pom.xml
+++ b/wz-jd/pom.xml
@@ -166,5 +166,33 @@
             <artifactId>poi</artifactId>
             <version>3.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.wz.prodect</groupId>
+            <artifactId>wz-java</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                    <!--<generatedSourcesDirectory>${project.build.directory}/generated-sources/</generatedSourcesDirectory>
+                    <annotationProcessors>
+                        <annotationProcessor>
+                            com.lzy.blog.processor.BuilderProcessor
+                        </annotationProcessor>
+                    </annotationProcessors>-->
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
 </project>
