--- a/wz-provider/pom.xml
+++ b/wz-provider/pom.xml
@@ -125,6 +125,12 @@
       <artifactId>rpc-smile</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.wz.prodect</groupId>
+      <artifactId>wz-java</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>wz-provider</finalName>
@@ -132,6 +138,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.7.0</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
       </plugin>
     </plugins>
   </build>
