ttl 及 与日志集成

--- a/elastic-search/src/main/resources/log4j2.properties
+++ b/elastic-search/src/main/resources/log4j2.properties
@@ -4,3 +4,7 @@ appender.console.layout.type=PatternLayout
 appender.console.layout.pattern=[%d{ISO8601}][%-5p][%-25c] %marker%m%n
 rootLogger.level=info
 rootLogger.appenderRef.console.ref=console
+
+#log4j2 ttl
+log4j2.threadContextMap=com.wz.ttl.log4j2.TtlThreadContextMap
+#isThreadContextMapInheritable=true
